--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-day-picker": "^9.11.1",
     "react-dom": "19.2.0",
     "react-error-boundary": "^6.0.0",
+    "react-intersection-observer": "^10.0.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "use-debounce": "^10.0.6",
