--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "prisma-seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
-    "@lucia-auth/adapter-prisma": "^4.0.1",
     "@node-rs/argon2": "^2.0.2",
+    "@oslojs/crypto": "^1.0.1",
+    "@oslojs/encoding": "^1.1.0",
     "@prisma/client": "^6.19.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.11",
@@ -33,7 +34,6 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "fastest-levenshtein": "^1.0.16",
-    "lucia": "^3.2.2",
     "lucide-react": "^0.553.0",
     "next": "16.0.1",
     "next-themes": "^0.4.6",
