--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@react-email/components": "^1.0.1",
+    "@react-email/render": "^1.4.0",
     "@tanstack/react-query": "^5.90.11",
     "big.js": "^7.0.1",
     "class-variance-authority": "^0.7.1",
@@ -47,6 +48,7 @@
     "react-dom": "19.2.0",
     "react-error-boundary": "^6.0.0",
     "react-intersection-observer": "^10.0.0",
+    "resend": "^6.5.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "use-debounce": "^10.0.6",
