--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "date-fns": "^4.1.0",
     "fastest-levenshtein": "^1.0.16",
     "inngest": "^3.47.0",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.553.0",
     "next": "16.0.7",
     "next-themes": "^0.4.6",
